--- a/app/src/main/res/layout/fragment_trip_screen.xml
+++ b/app/src/main/res/layout/fragment_trip_screen.xml
@@ -12,14 +12,14 @@
         android:layout_height="match_parent"
         tools:context=".presentation.trip.TripScreenFragment">
 
-
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tripTitle"
+            style="@style/fragments_title_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Trip Plan"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
