--- a/app/src/main/res/layout/guide_item_might_need_these.xml
+++ b/app/src/main/res/layout/guide_item_might_need_these.xml
@@ -4,11 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
-        <variable
-            name="imageData"
-            type="com.ersinberkealemdaroglu.tripplanapp.domain.travelmodel.Image" />
-
         <variable
             name="needTheseModel"
             type="com.ersinberkealemdaroglu.tripplanapp.domain.travelmodel.TravelModelItem" />
@@ -30,7 +25,6 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/localEvents"
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_5sdp"
                 app:cardCornerRadius="6dp">
@@ -40,7 +34,7 @@
                     android:layout_width="@dimen/_96sdp"
                     android:layout_height="@dimen/_108sdp"
                     android:scaleType="fitXY"
-                    android:downloadImageUrl="@{imageData.url}"
+                    android:downloadImageUrl="@{needTheseModel.images[0].url}"
                     android:src="@drawable/guide_image"
                     tools:ignore="ContentDescription" />
 
