--- a/app/src/main/res/layout/guide_item_might_need_these.xml
+++ b/app/src/main/res/layout/guide_item_might_need_these.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="needTheseModel"
-            type="com.ersinberkealemdaroglu.tripplanapp.domain.travelmodel.TravelModelItem" />
+            type="com.ersinberkealemdaroglu.tripplanapp.domain.model.travelmodel.TravelModelItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
