--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,9 @@
     <color name="top_destinations_text_color">#FCFCFD</color>
     <color name="nearby_item_text_background_color">#FF4760</color>
     <color name="search_bar_icon_color">#FF667A</color>
+    <color name="detail_title_color">#0A2753</color>
+    <color name="detaild_city_title_color">#39414B</color>
+    <color name="detail_button_background_color">#FF4760</color>
 
 
 </resources>
