--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -7,125 +7,143 @@
 
     </data>
 
-    <ScrollView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".view.HomeListFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".presentation.guide.GuideFragment">
+            android:layout_height="match_parent">
 
-
-            <TextView
-                android:id="@+id/guideTitle"
-                style="@style/fragments_title_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/guide"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/mightNeedRecyclerview"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_116sdp"
-                android:layout_marginTop="@dimen/_11sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mightNeedThese"
-                tools:listitem="@layout/guide_item_might_need_these" />
-
-            <TextView
-                android:id="@+id/mightNeedThese"
-                style="@style/guide_title"
-                android:text="@string/might_need_these"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/guideTitle" />
-
-            <EditText
-                android:id="@+id/searchBar"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_37sdp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:layout_marginEnd="16dp"
-                android:background="@drawable/search_bar_background"
-                android:descendantFocusability="blocksDescendants"
-                android:drawableEnd="@drawable/ic_search_bar_icon"
-                android:drawablePadding="@dimen/_10sdp"
-                android:ellipsize="end"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:fontFamily="@font/source_sans_pro"
-                android:hint="@string/where_next"
-                android:inputType="text"
-                android:maxLines="1"
-                android:padding="@dimen/_10sdp"
-                android:textColorHint="@color/car_ui_text_color_hint"
-                android:textSize="@dimen/_16ssp"
-                app:endIconDrawable="@drawable/ic_search_bar_icon"
-                app:endIconMode="custom"
-                app:endIconTint="@color/search_bar_icon_color"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mightNeedRecyclerview" />
-
-            <TextView
-                android:id="@+id/textView2"
-                style="@style/guide_title"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/top_pick_articles"
-                android:textAllCaps="true"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+                tools:context=".presentation.guide.GuideFragment">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/topArticlesRecyclerview"
-                android:layout_width="409dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="1dp"
-                app:layout_constraintBottom_toTopOf="@+id/ghostImage"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2"
-                tools:listitem="@layout/top_pick_articles_item" />
+                <TextView
+                    android:id="@+id/guideTitle"
+                    style="@style/fragments_title_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/guide"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/mightNeedRecyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_116sdp"
+                    android:layout_marginTop="@dimen/_11sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/mightNeedThese"
+                    tools:listitem="@layout/guide_item_might_need_these" />
+
+                <TextView
+                    android:id="@+id/mightNeedThese"
+                    style="@style/guide_title"
+                    android:text="@string/might_need_these"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/guideTitle" />
+
+                <EditText
+                    android:id="@+id/searchBar"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_37sdp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginEnd="16dp"
+                    android:background="@drawable/search_bar_background"
+                    android:descendantFocusability="blocksDescendants"
+                    android:drawableEnd="@drawable/ic_search_bar_icon"
+                    android:drawablePadding="@dimen/_10sdp"
+                    android:ellipsize="end"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:fontFamily="@font/source_sans_pro"
+                    android:hint="@string/where_next"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:padding="@dimen/_10sdp"
+                    android:textColorHint="@color/car_ui_text_color_hint"
+                    android:textSize="@dimen/_16ssp"
+                    app:endIconDrawable="@drawable/ic_search_bar_icon"
+                    app:endIconMode="custom"
+                    app:endIconTint="@color/search_bar_icon_color"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/mightNeedRecyclerview" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    style="@style/guide_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/top_pick_articles"
+                    android:textAllCaps="true"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/topArticlesRecyclerview"
+                    android:layout_width="409dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="1dp"
+                    app:layout_constraintBottom_toTopOf="@+id/ghostImage"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2"
+                    tools:listitem="@layout/top_pick_articles_item" />
 
 
-            <ImageView
-                android:id="@+id/ghostImage"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_60sdp"
-                android:background="@android:color/transparent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.476"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/topArticlesRecyclerview"
-                tools:ignore="ContentDescription" />
+                <ImageView
+                    android:id="@+id/ghostImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_60sdp"
+                    android:background="@android:color/transparent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.476"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/topArticlesRecyclerview"
+                    tools:ignore="ContentDescription" />
 
-            <Button
-                android:id="@+id/seeAllButton"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_14sdp"
-                android:background="@android:color/transparent"
-                android:fontFamily="@font/source_sans_pro_bold"
-                android:lineHeight="@dimen/_17sdp"
-                android:text="@string/sell_all"
-                android:textAllCaps="false"
-                android:textColor="@color/guide_see_all_text_color"
-                android:textFontWeight="600"
-                android:textSize="@dimen/_14ssp"
-                app:layout_constraintBottom_toBottomOf="@+id/mightNeedThese"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/mightNeedThese"
-                tools:ignore="UnusedAttribute" />
+                <Button
+                    android:id="@+id/seeAllButton"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/_14sdp"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/source_sans_pro_bold"
+                    android:lineHeight="@dimen/_17sdp"
+                    android:text="@string/sell_all"
+                    android:textAllCaps="false"
+                    android:textColor="@color/guide_see_all_text_color"
+                    android:textFontWeight="600"
+                    android:textSize="@dimen/_14ssp"
+                    app:layout_constraintBottom_toBottomOf="@+id/mightNeedThese"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/mightNeedThese"
+                    tools:ignore="UnusedAttribute" />
 
+                <ProgressBar
+                    android:id="@+id/guideLoading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="48dp"
+                    android:visibility="invisible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.498"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/topArticlesRecyclerview" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </layout>
