--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,7 +26,7 @@
         android:label="DetailFragment" >
         <argument
             android:name="blogData"
-            app:argType="com.ersinberkealemdaroglu.tripplanapp.domain.travelmodel.TravelModelItem" />
+            app:argType="com.ersinberkealemdaroglu.tripplanapp.domain.model.travelmodel.TravelModelItem" />
     </fragment>
     <fragment
         android:id="@+id/guideFragment"
@@ -49,6 +49,14 @@
         android:label="GuideSeeAllFragment" >
         <action
             android:id="@+id/action_guideSeeAllFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/bookmarkFragment"
+        android:name="com.ersinberkealemdaroglu.tripplanapp.presentation.trip.BookmarkFragment"
+        android:label="BookmarkFragment" >
+        <action
+            android:id="@+id/action_bookmarkFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
     </fragment>
 </navigation>
